# audioknob-gui

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BUGFEAT.md  LICENSE  NEXT_FEATURES.md  PLAN.md  PROJECT_STATE.md  README.md  optimise-codex.md  optimise-composer.md  overseer.md  pyproject.toml
.github/workflows/: consistency-check.yml
audioknob_gui/: __init__.py  registry.py
audioknob_gui/core/: audit.py  diffutil.py  paths.py  qjackctl.py  runner.py  transaction.py
audioknob_gui/data/: __init__.py  registry.json  registry.schema.json
audioknob_gui/gui/: app.py  tests_dialog.py
audioknob_gui/platform/: detect.py  packages.py
audioknob_gui/testing/: cyclictest.py  latencycalc.py  rtcheck.py
audioknob_gui/worker/: cli.py  ops.py
config/: registry.json  registry.schema.json
docs/research/knobs/: README.md  ideas.md  sources.md
packaging/: audioknob-gui-worker  audioknob-gui.desktop  audioknob-gui.desktop.template  install-polkit.sh  uninstall-polkit.sh
packaging/opensuse/: README.md  audioknob-gui.spec  build-rpm.sh
polkit/: org.audioknob-gui.policy
reference/: PROJECT_STATE.old.md  README.md  codex transcript.md  registry.old.json
scripts/: check_repo_consistency.py  dev-uninstall.sh  install-desktop.sh  smoke_test.sh
tests/: __init__.py  test_cli_commands.py  test_kernel_cmdline.py  test_pipewire_config.py  test_qjackctl.py  test_registry.py  test_sysfs_status.py  test_system_profile.py  test_transaction.py
